add dto for rest user