@@ -1,49 +1,43 @@
 package ai.anamaya.service.oms.core.service;
 
 import ai.anamaya.service.oms.core.dto.request.UpdatePasswordRequest;
-import ai.anamaya.service.oms.core.dto.request.UserUpdateRequest;
-import ai.anamaya.service.oms.core.dto.response.ApiResponse;
 import ai.anamaya.service.oms.core.dto.request.UserCreateRequest;
+import ai.anamaya.service.oms.core.dto.request.UserUpdateRequest;
 import ai.anamaya.service.oms.core.dto.response.UserResponse;
 import ai.anamaya.service.oms.core.entity.User;
 import ai.anamaya.service.oms.core.exception.NotFoundException;
 import ai.anamaya.service.oms.core.repository.UserRepository;
 import ai.anamaya.service.oms.core.security.JwtUtils;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageRequest;
-import org.springframework.data.domain.Pageable;
-import org.springframework.data.domain.Sort;
+
+import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.*;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
+import org.springframework.security.crypto.password.PasswordEncoder;
+
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-import org.springframework.security.crypto.password.PasswordEncoder;
 
 import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @Transactional
+@RequiredArgsConstructor
 public class UserService {
 
     private final UserRepository repository;
     private final PasswordEncoder passwordEncoder;
     private final JwtUtils jwtUtils;
 
-    public UserService(UserRepository repository, PasswordEncoder passwordEncoder, JwtUtils jwtUtils) {
-        this.repository = repository;
-        this.passwordEncoder = passwordEncoder;
-        this.jwtUtils = jwtUtils;
-    }
+    public UserResponse create(UserCreateRequest request) {
 
-    public ApiResponse<UserResponse> create(UserCreateRequest request) {
         Authentication auth = SecurityContextHolder.getContext().getAuthentication();
         Collection<? extends GrantedAuthority> authorities = auth.getAuthorities();
 
         boolean isCompanyAdmin = authorities.stream()
-                .anyMatch(a -> a.getAuthority().equals("ROLE_COMPANY_ADMIN"));
+            .anyMatch(a -> a.getAuthority().equals("ROLE_COMPANY_ADMIN"));
 
         if (isCompanyAdmin) {
             Long companyIdFromToken = jwtUtils.getCompanyIdFromToken();
@@ -53,27 +47,30 @@ public class UserService {
         }
 
         if (repository.existsByEmail(request.getEmail())) {
-            return ApiResponse.error("Email already exists");
+            throw new IllegalArgumentException("Email already exists");
         }
 
         User user = User.builder()
-                .companyId(request.getCompanyId())
-                .email(request.getEmail())
-                .password(passwordEncoder.encode(request.getPassword()))
-                .firstName(request.getFirstName())
-                .lastName(request.getLastName())
-                .gender(request.getGender())
-                .positionId(request.getPositionId())
-                .phoneNo(request.getPhoneNo())
-                .status(request.getStatus())
-                .build();
+            .companyId(request.getCompanyId())
+            .email(request.getEmail())
+            .password(passwordEncoder.encode(request.getPassword()))
+            .firstName(request.getFirstName())
+            .lastName(request.getLastName())
+            .gender(request.getGender())
+            .positionId(request.getPositionId())
+            .phoneNo(request.getPhoneNo())
+            .status(request.getStatus())
+            .build();
 
         repository.save(user);
-        return ApiResponse.success(toResponse(user));
+
+        return toResponse(user);
     }
 
-    public ApiResponse<UserResponse> update(Long id, UserUpdateRequest request) {
-        User user = repository.findById(id).orElseThrow(() -> new NotFoundException("User not found"));
+    public UserResponse update(Long id, UserUpdateRequest request) {
+
+        User user = repository.findById(id)
+            .orElseThrow(() -> new NotFoundException("User not found"));
 
         user.setCompanyId(request.getCompanyId());
         user.setEmail(request.getEmail());
@@ -85,82 +82,83 @@ public class UserService {
         user.setStatus(request.getStatus());
 
         repository.save(user);
-        return ApiResponse.success(toResponse(user));
+
+        return toResponse(user);
     }
 
+    public void updatePassword(UpdatePasswordRequest request) {
 
-    @Transactional
-    public ApiResponse<String> updatePassword(UpdatePasswordRequest request) {
         User user = repository.findById(request.getUserId())
-                .orElseThrow(() -> new NotFoundException("User not found"));
+            .orElseThrow(() -> new NotFoundException("User not found"));
 
-        // check if old password matches
         if (!passwordEncoder.matches(request.getOldPassword(), user.getPassword())) {
-            return ApiResponse.error("Old password is incorrect");
+            throw new IllegalArgumentException("Old password is incorrect");
         }
 
-        // hash the new password and save
         user.setPassword(passwordEncoder.encode(request.getNewPassword()));
         repository.save(user);
-
-        return ApiResponse.success("Password updated successfully");
     }
 
-    public ApiResponse<UserResponse> getById(Long id) {
+    public UserResponse getById(Long id) {
         User user = repository.findById(id)
-                .orElseThrow(() -> new NotFoundException("User with ID " + id + " not found"));
-        return ApiResponse.success(toResponse(user));
+            .orElseThrow(() -> new NotFoundException("User not found"));
+
+        return toResponse(user);
     }
 
-    public ApiResponse<List<UserResponse>> getAll(int page, int size, String sort) {
-        Sort sorting = Sort.by("created_at").descending();
+    public Page<UserResponse> getAll(int page, int size, String sort) {
+
+        Sort sorting = Sort.by("createdAt").descending(); // fix: createdAt in entity
 
         if (sort != null && !sort.isBlank()) {
-            String[] sortParams = sort.split(";");
-            String sortField = sortParams[0];
-            Sort.Direction direction = sortParams.length > 1 && sortParams[1].equalsIgnoreCase("desc")
+            String[] parts = sort.split(";");
+            String field = parts[0];
+            Sort.Direction direction =
+                (parts.length > 1 && parts[1].equalsIgnoreCase("desc"))
                     ? Sort.Direction.DESC
                     : Sort.Direction.ASC;
-            sorting = Sort.by(direction, sortField);
+
+            sorting = Sort.by(direction, field);
         }
 
         Pageable pageable = PageRequest.of(page, size, sorting);
+
         Page<User> users = repository.findAll(pageable);
 
-        List<UserResponse> data = users.getContent().stream()
+        List<UserResponse> mapped =
+            users.getContent().stream()
                 .map(this::toResponse)
-                .collect(Collectors.toList());
+                .toList();
 
-        return ApiResponse.paginatedSuccess(
-                data,
-                users.getTotalElements(),
-                users.getTotalPages(),
-                users.isLast(),
-                users.getSize(),
-                users.getNumber()
+        return new PageImpl<>(
+            mapped,
+            pageable,
+            users.getTotalElements()
         );
     }
 
-    public ApiResponse<String> delete(Long id) {
+    public void delete(Long id) {
+        if (!repository.existsById(id)) {
+            throw new NotFoundException("User not found");
+        }
         repository.deleteById(id);
-        return ApiResponse.success("User deleted successfully");
     }
 
     private UserResponse toResponse(User user) {
         return UserResponse.builder()
-                .id(user.getId())
-                .companyId(user.getCompanyId())
-                .email(user.getEmail())
-                .firstName(user.getFirstName())
-                .lastName(user.getLastName())
-                .gender(user.getGender())
-                .positionId(user.getPositionId())
-                .phoneNo(user.getPhoneNo())
-                .status(user.getStatus())
-                .createdBy(user.getCreatedBy())
-                .createdAt(user.getCreatedAt() != null ? user.getCreatedAt().toString() : null)
-                .updatedBy(user.getUpdatedBy())
-                .updatedAt(user.getUpdatedAt() != null ? user.getUpdatedAt().toString() : null)
-                .build();
+            .id(user.getId())
+            .companyId(user.getCompanyId())
+            .email(user.getEmail())
+            .firstName(user.getFirstName())
+            .lastName(user.getLastName())
+            .gender(user.getGender())
+            .positionId(user.getPositionId())
+            .phoneNo(user.getPhoneNo())
+            .status(user.getStatus())
+            .createdBy(user.getCreatedBy())
+            .createdAt(user.getCreatedAt() != null ? user.getCreatedAt().toString() : null)
+            .updatedBy(user.getUpdatedBy())
+            .updatedAt(user.getUpdatedAt() != null ? user.getUpdatedAt().toString() : null)
+            .build();
     }
 }
